--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "firebase": "^9.21.0"
+    "firebase": "^9.21.0",
+    "firebase-admin": "^11.7.0"
   }
 }
